samples/_failures_safe/1761411947_a2acbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b46c17d.c: In function ‘main’:
./samples/SAFE/__tmp_7b46c17d.c:173:9: error: expected declaration or statement at end of input
  173 |         free_graph(matrix_graph);
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_7b46c17d.c:173:9: error: expected declaration or statement at end of input
